<resources>
    <string name="app_name">Space News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hubble_sees_plunging_galaxy_losing_its_gas">Hubble Sees Plunging Galaxy Losing Its Gas</string>
    <string name="news_image">News Image</string>
    <string name="view_in_browser">View In Browser</string>
    <string name="open_in_browser">Open In Browser   </string>
    <string name="action_open_in_browser">Action Open In Browser</string>
    <string name="favorite">Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="error_in_connection">Error in connection ...</string>
    <string name="retry">Retry .</string>
    <string name="there_is_no_favorite_news_yet">There is no favorite News yet ...</string>
    <string name="Favorite_News">Favorite News</string>
<string name="All_News">All News</string>
    <string name="Explore">Explore</string>
    <string name="Watch_Video">Watch Video</string>
    <string name="Set_As_Wallpaper_Picture">Set As Wallpaper Picture</string>
    <string name="Your_WallPaper_picture_has_been_changed">"Your WallPaper picture has been changed"</string>
    <string name="Please_wait...">Please wait...</string>
    <string name="article_image">Article Image</string>
    <string name="favorite_image">favorite image</string>
    <string name="not_interested_image">not interested image</string>
    <string name="explore_image">explore image</string>
    <string name="watch">Watch</string>
    <string name="videos_for_you">Videos for you ...</string>
    <string name="watch_logo">watch logo</string>
    <string name="no_wifi_image">no wifi image</string>
</resources>
