<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.SubtitleCollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:subtitle=""
            app:title="Space News">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="300dp"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/article_image" />
                <ImageView
                    android:id="@+id/fav_btn"
                    android:layout_marginStart="300dp"
                    android:layout_marginTop="250dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border_black_24dp"
                    android:contentDescription="@string/favorite_image" />
            </FrameLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/news_toolbarr"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:subtitleTextColor="#fff"
                app:titleTextColor="#fff">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.SubtitleCollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/article_body"
                android:layout_margin="10dp"
                android:textSize="17sp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:paddingBottom="10dp"/>

             </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/browser_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/action_open_in_browser"
        android:elevation="@dimen/fab_elevation"
        android:src="@drawable/ic_open_in_browser_black_24dp"
        app:fabSize="normal"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="24dp"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp" />


</android.support.design.widget.CoordinatorLayout>